charts/Infrastructure/argocd/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.cameran-lai.com`)
      middlewares:
        - name: authentik
          namespace: traefik
      services:
        - name: argocd-server
          port: 443
  tls:
    secretName: argo-cert
